Fixed Sponsers&ContactUs page format
Fixed the format for the Sponsers&ContactUs page so it wouldn't show the white bars when width is less than 500px. Also, I Resized the form box so it wouldn't cut off when reaching 500px or less.

--- a/src/components/Form/styles.scss
+++ b/src/components/Form/styles.scss
@@ -8,6 +8,17 @@
     border-radius: 2rem;
     margin: 2% 7% 0 7%;
 
+    //form box is adjusted depending on its width
+    @media (max-width: 1000px) {
+    width: 75%;
+    }
+    @media (max-width: 750px) {
+        width: 70%;
+    }
+    @media (max-width: 450px) {
+       width: 61%;
+    }
+    
     @media only screen and (max-width: 900px), only screen and (max-height: 640px) {
         margin-bottom: 2rem;
     }
